--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -69,7 +69,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition:task-definition: micovision-model/dynamic/micovision-api-node/deploy-properties/${{ env.ECS_TASK_DEFINITION }
+          task-definition:task-definition: micovision-model/dynamic/micovision-api-node/deploy-properties/${{ env.ECS_TASK_DEFINITION }}
           container-name: ${{ env.ECS_CONTAINER_NAME }}
           image: ${{ steps.output-image.outputs.image }}
 
